changed to 'import diempy as diem'

--- a/example_workflow/tutorial.ipynb
+++ b/example_workflow/tutorial.ipynb
@@ -15,7 +15,7 @@
     "import matplotlib.pyplot as plt\n",
     "np.set_printoptions(legacy = '1.25')\n",
     "\n",
-    "import diem\n",
+    "import diempy as diem\n",
     "import time\n",
     "\n",
     "import sys\n",
