added user-defined initial polarity section at the end.

--- a/example_workflow/tutorial.ipynb
+++ b/example_workflow/tutorial.ipynb
@@ -1305,6 +1305,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2bd4f1e4",
+   "metadata": {},
+   "source": [
+    "## Masking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e299f9fb-15d4-48fc-9503-34fd21da545f",
    "metadata": {},
    "source": [
@@ -1374,12 +1382,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2978307e",
+   "metadata": {},
+   "source": [
+    "## Pre-defined initial polarity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f50e1df",
+   "metadata": {},
+   "source": [
+    "**Note: The ability to pre-define an initial polarity is largely for development and testing purposes.**\n",
+    "\n",
+    "**In general, we recommend the default behaviour, that is, users should allow diempy to generate a random null polarity to avoid biasing results**\n",
+    "\n",
+    "\n",
+    "When we call the polarize() function of an input diemtype object, it automatically generates a new randomly-drawn null polarity as a starting point, storing this as an attribute of the output diemtype object along with the final polarity, DI, etc. The user does not have the ability to pre-define the seed used by the random number generator. \n",
+    "\n",
+    "However, we do provide the means to assign an explicit initial polarity before the expectation-maximization step. If provided, this will serve as the starting point of the EM algorithm instead of generating a new random polarity.  \n",
+    "\n",
+    "A pre-defined initial polarity is given by a text file with columns for 'chromosome', 'position', and 'polairty'.  A value for every site in the dataset must be provided.\n",
+    "\n",
+    "This attribute must be added to the raw diemtype object. Once added, the polarize() function will automatically use the provided initial values for the start of the EM algorithm. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e26864e4-cf2f-4e1a-af8d-383e6842d49f",
+   "id": "50607c2e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dRawWithInit = dRaw.copy()\n",
+    "dRawWithInit.add_initial_polarity('./user_files/user_initial_pol.txt')\n",
+    "dRawWithInit.polarize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e26864e4-cf2f-4e1a-af8d-383e6842d49f",
+   "metadata": {},
+   "source": [
+    "##"
+   ]
   }
  ],
  "metadata": {
