updated tutorial with Stuart's edits

--- a/example_workflow/tutorial.ipynb
+++ b/example_workflow/tutorial.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vcfFile = './data/iphiclides_example.vcf.gz'"
+    "vcfFile = './data/iphiclides_example.vcf.gz' "
    ]
   },
   {
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.system('vcf2diem '+vcfFile)"
+    "os.system('vcf2diem '+ '\\'' + vcfFile +'\\'') # The extra quotes allows os to recognise file paths with spaces"
    ]
   },
   {
@@ -263,14 +263,6 @@
    "source": [
     "If we have already polarized the data, we can load the data back in either way:"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc5e6ac4-929f-472b-9382-3e4c08aab9bb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -622,7 +614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dSmoothed = dThresh.smooth(5e-5)"
+    "dSmoothedUnsorted = dThresh.smooth(5e-5)"
    ]
   },
   {
@@ -641,7 +633,7 @@
    "outputs": [],
    "source": [
     "diem.plot_painting(dThresh.DMBC[9],dThresh.indNames)\n",
-    "diem.plot_painting(dSmoothed.DMBC[9],dSmoothed.indNames)"
+    "diem.plot_painting(dSmoothedUnsorted.DMBC[9],dSmoothedUnsorted.indNames)"
    ]
   },
   {
@@ -661,7 +653,7 @@
    "source": [
     "fig,ax = plt.subplots(figsize=(6,4))\n",
     "ax.plot(dThresh.HIs,marker='.',color='b')\n",
-    "ax.plot(dSmoothed.computeHIs(),marker='.',color='r')\n",
+    "ax.plot(dSmoothedUnsorted.computeHIs(),marker='.',color='r')\n",
     "ax.set_ylabel('HI')\n",
     "ax.set_xlabel('individual idx')\n",
     "plt.show()"
@@ -682,7 +674,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dSmoothed = dSmoothedUnsorted.copy()\n",
     "dSmoothed.sort()\n",
+    "\n",
     "diem.plot_painting(dSmoothed.DMBC[9],dSmoothed.indNames)"
    ]
   },
@@ -1053,7 +1047,9 @@
    "source": [
     "Polarisation has not changed your data, only coloured it and measured it. The **GenomeSummaryPlot** shows these colours, and the effects of ignoring sites with low diagnostic index (DI).\n",
     "\n",
-    "Sort individuals by their hybrid index using the red button. Slide the DI slider to the right to focus on barrier relevant sites. If your data is large, you may need to _click_ at your desired DI value rather than sliding. Mouse-over a plot symbol to see which individual it refers to. You can save the plot using the click-on tool or keyboard shortcut S.\n",
+    "Sort individuals by their hybrid index using the red button. Mouse-over a plot symbol to see which individual it refers to. Slide the DI slider to the right to focus on barrier relevant sites. **For this and other 'DI slider' plots, if your data is large or the SLIDER STICKs, use GenomeSummaryPlot(dPol, prefill_cache=True) and re-evaluate**. If it seems to be taking a very long time, add the argument progress=\"text\" and re-eval.  \n",
+    "\n",
+    "You can save the plot using the click-on tool or keyboard shortcut S.\n",
     "\n",
     "**TOUCHDOWN DI**: As you slide DI to the right, first Unpolarisable (U, grey line) data will be filtered out (blanks and genotypes involving third states). Next the span of the hybrid indices (red line) should start to increase (you may wish to hit the red button to re-sort by the new HI). One way of choosing a DI threshold is to move right until 'touchdown' where the hybrid index goes to zero on one side of the barrier, and 1 on the other. An outlier individual may touchdown first, way before others; in that case keep going until other have joined. There is a trade-off: the further to the right, the cleaner the retained data with respect to the barrier, but the fewer sites in the genome are being considered."
    ]
@@ -1061,11 +1057,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d31c8c68-9d5f-4b97-904b-43066cf4e2a8",
+   "id": "2b94ddad-b24f-4086-828b-910cc3f20636",
    "metadata": {},
    "outputs": [],
    "source": [
-    "diem.plots.GenomeSummaryPlot(dPol)"
+    "diem.GenomeSummaryPlot(dPol)"
    ]
   },
   {
@@ -1084,7 +1080,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diem.plots.GenomeMultiSummaryPlot(dPol,[0,1,2])"
+    "diem.GenomeMultiSummaryPlot(dPol,[0,1,19])"
    ]
   },
   {
@@ -1094,7 +1090,7 @@
    "source": [
     "There are many ways to summarise genomes with respect to the sites diagnosing a barrier. The **GenomicDeFinetti** diagram uses HOM1 HET HOM2 frequencies to place genomes in a ternary plot. The colours are a blend of not just these proportions, but also the Unpolarisable proportion (as White). Skim-sequenced genomes will, for example, have lighter shades due to more missing data.\n",
     "\n",
-    "The background parabola is analogous to Hardy-Weinberg equilibrium for HOM1 HET HOM2 frequencies at a single site of a genome. In current context the parabola is the genomic expectation if admixture is proceeding with local HWE in a simlar fashion throughout the genome (ie with similar admixture proportions)."
+    "The background parabola is analogous to Hardy-Weinberg equilibrium for HOM1 HET HOM2 frequencies at a single site of a genome. In current context the parabola is the genomic expectation if admixture is proceeding with local HWE in a similar fashion throughout the genome (ie with similar admixture proportions). As before... mouse-over a symbol to see its genome ID below the plot."
    ]
   },
   {
@@ -1104,7 +1100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diem.plots.GenomicDeFinettiPlot(dPol)"
+    "diem.GenomicDeFinettiPlot(dPol)"
    ]
   },
   {
@@ -1122,7 +1118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diem.plots.GenomicMultiDeFinettiPlot(dPol,range(3))"
+    "diem.GenomicMultiDeFinettiPlot(dPol,[0,1,2,19])"
    ]
   },
   {
@@ -1142,7 +1138,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diem.plots.GenomicContributionsPlot(dPol)"
+    "diem.GenomicContributionsPlot(dPol,range(35))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3a10c27-2cca-428c-96b0-bc4d28ca9f53",
+   "metadata": {},
+   "source": [
+    "The same plot, but from the perspective of individuals (**IndGenomicContributionsPlot**) illustrates that the statewise nature of individuals is largely invariant to DI filtering, while highlighting that 'central' individuals tend to have higher heterozygosity (See Petruezela et al Mol Ecol 2025), much as **GenomeSummaryPlot**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f2ce0e5-8757-46c3-9bff-0f102710eacb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diem.IndGenomicContributionsPlot(dPol)"
    ]
   },
   {
@@ -1152,7 +1166,7 @@
    "source": [
     "It may be that admixture has produced an explosion of genome-types, such that genomes are all unique and their summaries change smoothly across the barrier. Alternatively, for eg a taxon of hybrid origin, a single along-genome blockwise admixture pattern may occur in multiple individuals. **diemPairsPlot** allows you to explore these possibilities through all pairwise comparison of the painted colours of the polarised genomes. \n",
     "\n",
-    "The is a genomic O(n<sup>2</sup>) calculation... so choose one DI threshold at a time (maybe a touchdown DI) it may take a while before it plots.... be patient.\n",
+    "This is a genomic O(n<sup>2</sup>) calculation... so even with small data we use prefill_cache-ing (the default is prefill_cache=True)\n",
     "\n",
     "In the plot genomes are ordered simply by their hybrid index.\n",
     "\n",
@@ -1168,17 +1182,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diem.plots.diemPairsPlot(dPol,-100)"
+    "diem.diemPairsPlot(dPol)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "93e2bf84-7407-49a0-bd26-dc0cb31f9a8f",
+   "metadata": {},
+   "source": [
+    "**diemMultiPairsPlot** is the per-chromosome generalisation of **diemPairsPlot**. DI sliding is now even more graphically demanding, and even with the default prefil_cache=True you may find the slider jerky."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa9f2f19-2292-477a-8818-69a2aae96edf",
+   "id": "5b91375c-9b7d-4b00-a187-c076824fb2b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "diem.plots.diemMultiPairsPlot(dPol,[0,1,2,3,4,5,23],-100)"
+    "diem.diemMultiPairsPlot(dPol,[0,1,2,5,19,29])"
    ]
   },
   {
@@ -1186,16 +1209,17 @@
    "id": "3933870b-ee1f-4479-958a-64be4c4c49c2",
    "metadata": {},
    "source": [
-    "We mentioned 'detailed purple/teal long-genome pattern'. What does this look like? **diemIrisFromPlotPrep** allows us to see this detail for the whole genome, for all the genomes, all at once. \n",
+    "When describing **diemPairsPlot** we mentioned 'detailed purple/teal along-genome pattern'. What does this look like? **diemIrisFromPlotPrep** allows us to see this detail for the whole genome, for all the genomes, all at once. \n",
     "\n",
     "Again this is a computationally intensive task, so first we run a prepatory step **diemPlotPrepFromBedMeta**, which loads the data you saved in the **Polarisation** section and prepares is for the big plot of everything...\n",
     "\n",
-    "Give your plot a (short) theme.\n",
-    "Set the correct files from **Polarisation**\n",
-    "Choose a (touchdown) DI threshold\n",
-    "Choose a number of 'pixels' (in multiple of 360... the plot is going to be a ring)\n",
-    "Choose the interval between ticks in bases\n",
-    "(We will come to smoothing later)."
+    "Give your plot a (short) theme.  \n",
+    "Set the correct files from the **Polarisation** section above\n",
+    "Choose a (touchdown) DI threshold  \n",
+    "Choose a number of 'pixels' (in multiple of 360... the plot is going to be a ring)  \n",
+    "Choose the interval between ticks in bases  \n",
+    "\n",
+    "You can visualise the effects of the smoothing described in **Smoothing the Data** above by setting the 'smooth' parameter."
    ]
   },
   {
@@ -1205,14 +1229,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MyFirstPlotPrep = diem.plots.diemPlotPrepFromBedMeta(\n",
+    "MyFirstPlotPrep = diem.diemPlotPrepFromBedMeta(\n",
     "    plot_theme=\"tutorial example\",\n",
     "    bed_file_path=bedOutFile,\n",
     "    meta_file_path=metaCorrected,\n",
     "    di_threshold=-57,  \n",
-    "    genome_pixels=360*1,\n",
+    "    genome_pixels=360*10,\n",
     "    ticks=10000, # bases\n",
-    "    smooth=5e-5\n",
+    "    smooth=10e-5\n",
     ")"
    ]
   },
@@ -1223,7 +1247,17 @@
    "source": [
     "Now we construct an Iris Plot from the prepared data:\n",
     "\n",
-    "Mouse-over and you genome/indidivual location will be displayed below the plot... browse your admixture features."
+    "Mouse-over and you genome/indidivual location will be displayed below the plot... browse your admixture features.\n",
+    "\n",
+    "**Smoothing** vs **Dithering** Try the iris plot for the four possible combinations of _smoothing_ OFF/ON and _dithering_ genome_pixels MANY/FEW (eg 360*10 vs *1)  \n",
+    "\n",
+    "_Smoothing_ always returns _modal_ states (HOM1,HET,HOM2,U), and so will always show one of 4 colours.  \n",
+    "_Dithering_ returns _mean_ states, and so can display pixels of many different blends of the 4 base colours.\n",
+    "\n",
+    "For high resolution pixels there tends to be only one state in each pixel, mean == mode, so with smoothing OFF and MANY pixels you see all the detail of your genomes.\n",
+    "If you have millions of unsmoothed variant sites, plotting them individually leads to plot-order artifacts, so high resolution dithering is the way forward for detailed visualisation, while then _reducing_ the number of pixels (lowering resolution) may reveal genome regions of 'new' shades where, for example, the nature of recombination differs.\n",
+    "\n",
+    "If you smooth your sites they tend to form long runs of the same state within chromosomes (because that is how recombination works). Iris plot and its relatives plot these runs, rather than individual sites, so smooth plots render fast and accurately even with low resolution pixels."
    ]
   },
   {
@@ -1233,29 +1267,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diem.plots.diemIrisFromPlotPrep(MyFirstPlotPrep)"
+    "diem.diemIrisFromPlotPrep(MyFirstPlotPrep)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "0d6883bb-0def-4d12-9833-2c8a570658e8",
+   "id": "797cf70b-2a71-4aa8-a5ea-e2af17e9cbfd",
    "metadata": {},
    "source": [
-    "We can straighten out this curl to make a rectangular plot using **diemLongFromPlotPrep**:\n",
-    "\n",
-    "You can choose which chromosomes to include.\n",
+    "**iris plots** show genomes curled up into a circle. We can straighten out this curl to make a rectangular plot from the same data using **diemLongFromPlotPrep**:\n",
     "\n",
     "Again this is browsable."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e98759ea-0a73-4b5b-9f92-f8dd37321981",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diem.plots.diemLongFromPlotPrep(MyFirstPlotPrep)"
    ]
   },
   {
@@ -1273,7 +1296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diem.plots.diemLongFromPlotPrep(MyFirstPlotPrep,range(3))"
+    "diem.diemLongFromPlotPrep(MyFirstPlotPrep,range(3))"
    ]
   },
   {
@@ -1292,7 +1315,7 @@
    "outputs": [],
    "source": [
     "for i in range(3):\n",
-    "    diem.plots.diemLongFromPlotPrep(MyFirstPlotPrep,[i])"
+    "    diem.diemLongFromPlotPrep(MyFirstPlotPrep,[i])"
    ]
   },
   {
@@ -1419,14 +1442,6 @@
     "dRawWithInit.add_initial_polarity('./user_files/user_initial_pol.txt')\n",
     "dRawWithInit.polarize()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e26864e4-cf2f-4e1a-af8d-383e6842d49f",
-   "metadata": {},
-   "source": [
-    "##"
-   ]
   }
  ],
  "metadata": {
@@ -1445,7 +1460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
